--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["HASHSCAN", "Hbar", "Hbars", "HEDERA"]
+  "cSpell.words": ["HASHSCAN", "Hbar", "Hbars", "HEDERA", "Skiller"]
 }
