--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-lottie": "^1.2.3",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.8.2",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-scrollbars-custom": "^4.1.1",
     "react-swipeable-views": "^0.14.0",
