--- a/package.json
+++ b/package.json
@@ -31,14 +31,15 @@
     "react-swipeable-views": "^0.14.0",
     "react-toastify": "^9.1.1",
     "rodal": "^2.0.1",
+    "serve": "^14.2.0",
     "socket.io-client": "^4.1.2",
     "styled-components": "^5.3.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
