--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,10 @@
 # cloudbuild.yaml
 steps:
-  - name: 'package install'
-    args: ['install', '-f']
-
-  - name: 'package build'
+  - name: 'gcr.io/cloud-builders/npm'
     args: ['run', 'build']
+
+  - name: 'gcr.io/cloud-builders/npm'
+    args: ['install', '-f']
 
   - name: 'gcr.io/cloud-builders/gcloud'
     args: ['app', 'deploy']
