--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,10 @@
 # cloudbuild.yaml
 steps:
   - name: 'gcr.io/cloud-builders/npm'
-    args: ['run', 'build']
+    args: ['install', '-force']
 
   - name: 'gcr.io/cloud-builders/npm'
-    args: ['install', '-f']
+    args: ['run', 'build']
 
   - name: 'gcr.io/cloud-builders/gcloud'
     args: ['app', 'deploy']
