--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "node build/server",
+    "start": "node server",
     "dev": "set NODE_ENV=dev&&nodemon server",
     "clientBuild": "cd client && npm install -force && npm run build"
   },
