--- a/app.yaml
+++ b/app.yaml
@@ -8,11 +8,15 @@ handlers:
   # Serve API routes using the Node.js app
   - url: /api/.*
     script: auto
+    secure: always
+    redirect_http_response_code: 301
 
   # Serve static assets from the React build folder
   - url: /(.*\.(js|css|png|jpg|gif|ico|json|html|otf))$
     static_files: client/build/\1
     upload: client/build/.*\.(js|css|png|jpg|gif|ico|json|html|otf)$
+    secure: always
+    redirect_http_response_code: 301
 
   # Serve the index.html file for all other routes
   - url: /.*
