Successful deployment with FE and node BE working

--- a/app.yaml
+++ b/app.yaml
@@ -11,7 +11,7 @@ handlers:
     secure: always
     redirect_http_response_code: 301
 
-  # Serve static assets from the React build folder
+  # Serve static assets from the React build 
   - url: /(.*\.(js|css|png|jpg|gif|ico|json|html|otf))$
     static_files: client/build/\1
     upload: client/build/.*\.(js|css|png|jpg|gif|ico|json|html|otf)$
