--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "set NODE_ENV=dev&&nodemon server",
     "start": "node server.js",
-    "clientBuild": "cd client && npm install -force && npm run build"
+    "clientBuild": "cd client && npm install -force && npm run build",
+    "server": "nodemon server",
+    "client": "npm start --prefix client",
+    "dev": "set NODE_ENV=dev&&concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Skiller Champion",
   "license": "ISC",
