--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,8 @@ client/.env.local
 client/.env.development.local
 client/.env.test.local
 
+package-lock.json
+client/package-lock.json
 
 npm-debug.log*
 yarn-debug.log*
