--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "axios": "^0.21.1",
     "config": "^3.3.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "express-validator": "^6.15.0",
     "fs": "^0.0.1-security",
@@ -30,14 +29,15 @@
     "request": "^2.88.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "dotenv": "^16.0.3",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-prettier": "^4.2.1",
     "nodemon": "^2.0.7",
-    "prettier": "^2.2.1",
-    "@babel/cli": "^7.21.0",
-    "@babel/core": "^7.21.4",
-    "@babel/preset-env": "^7.21.4"
+    "prettier": "^2.2.1"
   },
   "lint": "eslint .",
   "lint:fix": "eslint --fix",
