--- a/client/package.json
+++ b/client/package.json
@@ -37,7 +37,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set REACT_APP_ENV=production&&react-scripts start",
     "startLocal": "set REACT_APP_ENV=development&&react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
