--- a/client/package.json
+++ b/client/package.json
@@ -37,8 +37,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "set REACT_APP_ENV=production&&react-scripts start",
-    "startLocal": "set REACT_APP_ENV=development&&react-scripts start",
+    "start": "env-cmd -f .env.production react-scripts start",
+    "startLocal": "env-cmd -f .env.development react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
   },
@@ -63,6 +63,7 @@
   "devDependencies": {
     "@vue/eslint-config-prettier": "^7.1.0",
     "autoprefixer": "^10.4.13",
+    "env-cmd": "^10.1.0",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-prettier": "^4.2.1",
