--- a/package.json
+++ b/package.json
@@ -26,14 +26,14 @@
     "moment-timezone": "^0.5.33",
     "mybatis-mapper": "^0.6.8",
     "pg": "^8.10.0",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "dotenv": "^16.0.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.21.0",
     "@babel/core": "^7.21.4",
     "@babel/preset-env": "^7.21.4",
     "concurrently": "^8.0.1",
-    "dotenv": "^16.0.3",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-prettier": "^4.2.1",
