--- a/.env.production
+++ b/.env.production
@@ -4,8 +4,8 @@ TREASURY_PRIVATE_KEY=302e020100300506032b657004220420a9f9e81bbc4cc1d43af5fd49367
 TOPIC_ID_FORTUNE_WHEEL=0.0.3851161
 RUN_TESTNET=true
 
-DB_USER="postgres"
-DB_PASSWORD_KEY="postgres"
+DB_USER="production"
+DB_PASSWORD_KEY="production"
 DATABASE="skiller_champion"
 DB_HOST="127.0.0.1:5432"
 
