--- a/.env.development
+++ b/.env.development
@@ -12,3 +12,4 @@ DATABASE="skiller_champion"
 DB_HOST="127.0.0.1:5432"
 
 HEDERA_NODE_API=https://testnet.mirrornode.hedera.com
+API_ACCESS_KEY=eyeyetbsookfudgjd..,sjsjdfh9nbsffxabkvokausagasg
