--- a/client/.env.production
+++ b/client/.env.production
@@ -13,4 +13,6 @@ REACT_APP_SILVER_PASS_TOKEN_ID=0.0.3833530
 REACT_APP_TOPIC_ID_FORTUNE_WHEEL=0.0.3851161
 REACT_APP_HASHSCAN_URL=https://hashscan.io/testnet
 REACT_APP_RUN_TESTNET=true
+REACT_APP_API_ACCESS_KEY=eyeyetbsookfudgjd..,sjsjdfh9nbsffxabkvokausagasg
+
 
