--- a/client/.env.production
+++ b/client/.env.production
@@ -8,11 +8,10 @@ REACT_APP_TREASURY_PUBLIC_KEY=302a300506032b6570032100473e89cca65d96754b15b0d3ee
 
 REACT_APP_PLATINUM_PASS_TOKEN_ID=0.0.3833528
 REACT_APP_GOLD_PASS_TOKEN_ID=0.0.3833529
-REACT_APP_SILVER_PASS_TOKEN_ID=0.0.3833530
+REACT_APP_SILVER_PASS_TOKEN_ID=0.0.4578867
 
 REACT_APP_TOPIC_ID_FORTUNE_WHEEL=0.0.3851161
 REACT_APP_HASHSCAN_URL=https://hashscan.io/testnet
 REACT_APP_RUN_TESTNET=true
-REACT_APP_API_ACCESS_KEY=eyeyetbsookfudgjd..,sjsjdfh9nbsffxabkvokausagasg
-
+REACT_APP_ENCRYPTION_KEY=fpydn87d.12pvud21.shd.4545shivd.88764sajfhhof..rlah
 
