--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@socket.io/component-emitter": "^4.0.0",
     "axios": "^1.3.4",
     "cra-template": "1.2.0",
+    "crypto-js": "^4.1.1",
     "hashconnect": "^0.2.4",
     "moment": "^2.29.4",
     "react": "^17.0.2",
