--- a/cloudbuild-testing.yaml
+++ b/cloudbuild-testing.yaml
@@ -7,4 +7,4 @@ steps:
     args: ['install', '--force']
 
   - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['app', 'deploy', --appyaml=app-testing.yaml]
+    args: ['app', 'deploy', 'app-testing.yaml']
