--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,4 +7,4 @@ steps:
     args: ['install', '--force']
 
   - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['app', 'deploy', --appyaml=app-prod.yaml]
+    args: ['app', 'deploy', 'app-prod.yaml']
