connecting cloud sql

--- a/.env.development
+++ b/.env.development
@@ -8,7 +8,8 @@ RUN_TESTNET=true
 DB_USER="postgres"
 DB_PASSWORD_KEY="postgres"
 DATABASE="skiller_champion"
-DB_HOST="127.0.0.1:5432"
+DB_HOST="127.0.0.1"
+DB_PORT="5432"
 
 HEDERA_NODE_API=https://testnet.mirrornode.hedera.com
 API_ACCESS_KEY=eyeyetbsookfudgjd..,sjsjdfh9nbsffxabkvokausagasg
