--- a/app-testing.yaml
+++ b/app-testing.yaml
@@ -12,6 +12,7 @@ env_variables:
   DB_PASSWORD_KEY: 'TESTING_DB_PASSWORD_KEY'
   DATABASE: 'skiller_champion'
   DB_HOST: '/cloudsql/skiller-champion:us-central1:testing-db'
+  DB_PORT: '5432'
   HEDERA_NODE_API: https://testnet.mirrornode.hedera.com
   ENCRYPTION_KEY: fpydn87d.12pvud21.shd.4545shivd.88764sajfhhof..rlah
   nodeMailerUser: stuntmania201@gmail.com
