Added cloud SQL connection in local an testing

--- a/.env.development
+++ b/.env.development
@@ -6,9 +6,9 @@ TREASURY_PRIVATE_KEY=302e020100300506032b657004220420a9f9e81bbc4cc1d43af5fd49367
 RUN_TESTNET=true
 
 DB_USER="postgres"
-DB_PASSWORD_KEY="postgres"
-DATABASE="skiller_champion"
-DB_HOST="127.0.0.1"
+DB_PASSWORD_KEY="/mLxA[y+]4x#>^o5"
+DATABASE="postgres"
+DB_HOST="34.66.137.245"
 DB_PORT="5432"
 
 HEDERA_NODE_API=https://testnet.mirrornode.hedera.com
