--- a/app-testing.yaml
+++ b/app-testing.yaml
@@ -10,7 +10,7 @@ env_variables:
   RUN_TESTNET: true
   DB_USER: 'postgres'
   DB_PASSWORD_KEY: 'TESTING_DB_PASSWORD_KEY'
-  DATABASE: 'skiller_champion'
+  DATABASE: 'postgres'
   DB_HOST: '/cloudsql/skiller-champion:us-central1:testing-db'
   DB_PORT: '5432'
   HEDERA_NODE_API: https://testnet.mirrornode.hedera.com
