--- a/app-testing.yaml
+++ b/app-testing.yaml
@@ -8,16 +8,16 @@ env_variables:
   TREASURY_ACCOUNT_ID: 0.0.3833523
   TREASURY_PRIVATE_KEY: TREASURY_PRIVATE_KEY
   RUN_TESTNET: true
-  DB_USER: 'postgres'
+  DB_USER: 'TESTING_DB_USER_KEY'
   DB_PASSWORD_KEY: 'TESTING_DB_PASSWORD_KEY'
-  DATABASE: 'postgres'
-  DB_HOST: '/cloudsql/skiller-champion:us-central1:testing-db'
+  DATABASE: 'TESTING_DB_NAME_KEY'
+  DB_HOST: 'TESTING_DB_HOST_KEY'
   DB_PORT: '5432'
   HEDERA_NODE_API: https://testnet.mirrornode.hedera.com
   ENCRYPTION_KEY: fpydn87d.12pvud21.shd.4545shivd.88764sajfhhof..rlah
-  nodeMailerUser: stuntmania201@gmail.com
-  nodeMailerPass: nodeMailerPass
-  nodeMailerRecipient: stuntmania101@gmail.com
+  NODE_MAILER_USER: stuntmania201@gmail.com
+  NODE_MAILER_PASS: NODE_MAILER_PASS
+  NODE_MAILER_RECIPIENT: stuntmania101@gmail.com
 
 handlers:
   # Serve API routes using the Node.js app
