--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "crypto-js": "^4.1.1",
     "hashconnect": "^0.2.4",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "react": "^17.0.2",
     "react-confetti": "^6.1.0",
     "react-dom": "^17.0.2",
