--- a/app-testing.yaml
+++ b/app-testing.yaml
@@ -6,7 +6,7 @@ env_variables:
   PORT: 8080
   API_ACCESS_KEY: ey.at622.fuafjgk8f.gjsgaa.0paf9g6a.ghards
   TREASURY_ACCOUNT_ID: 0.0.3833523
-  TREASURY_PRIVATE_KEY: TREASURY_PRIVATE_KEY
+  TREASURY_PRIVATE_KEY: 'TESTING_TREASURY_PRIVATE_KEY'
   RUN_TESTNET: true
   DB_USER: 'TESTING_DB_USER_KEY'
   DB_PASSWORD_KEY: 'TESTING_DB_PASSWORD_KEY'
