--- a/app-prod.yaml
+++ b/app-prod.yaml
@@ -4,15 +4,15 @@ env_variables:
   NODE_ENV: production
   PORT: 8080
   API_ACCESS_KEY: ey.at622.fuafjgk8f.gjsgaa.0paf9g6a.ghards
-  TREASURY_ACCOUNT_ID: 0.0.3833523
-  TREASURY_PRIVATE_KEY: TREASURY_PRIVATE_KEY
-  RUN_TESTNET: true
-  DB_USER: 'TESTING_DB_USER_KEY'
-  DB_PASSWORD_KEY: 'TESTING_DB_PASSWORD_KEY'
-  DATABASE: 'TESTING_DB_NAME_KEY'
-  DB_HOST: 'TESTING_DB_HOST_KEY'
+  TREASURY_ACCOUNT_ID: 0.0.2667423
+  TREASURY_PRIVATE_KEY: 'TREASURY_PRIVATE_KEY'
+  RUN_TESTNET: false
+  DB_USER: 'DB_USER_KEY'
+  DB_PASSWORD_KEY: 'DB_PASSWORD_KEY'
+  DATABASE: 'DB_NAME_KEY'
+  DB_HOST: 'DB_HOST_KEY'
   DB_PORT: '5432'
-  HEDERA_NODE_API: https://testnet.mirrornode.hedera.com
+  HEDERA_NODE_API: https://mainnet-public.mirrornode.hedera.com
   ENCRYPTION_KEY: fpydn87d.12pvud21.shd.4545shivd.88764sajfhhof..rlah
   NODE_MAILER_USER: stuntmania201@gmail.com
   NODE_MAILER_PASS: NODE_MAILER_PASS
