added mainnet in FE

--- a/client/.env.production
+++ b/client/.env.production
@@ -10,6 +10,6 @@ REACT_APP_SILVER_PASS_TOKEN_ID=0.0.2667749
 
 REACT_APP_TOPIC_ID_FORTUNE_WHEEL=0.0.3851161
 REACT_APP_HASHSCAN_URL=https://hashscan.io/mainnet
-REACT_APP_RUN_TESTNET=
+REACT_APP_NET=mainnet
 REACT_APP_ENCRYPTION_KEY=fpydn87d.12pvud21.shd.4545shivd.88764sajfhhof..rlah
 
