--- a/client/.env.development
+++ b/client/.env.development
@@ -11,4 +11,5 @@ REACT_APP_SILVER_PASS_TOKEN_ID=0.0.4578867
 REACT_APP_TOPIC_ID_FORTUNE_WHEEL=0.0.3851161
 REACT_APP_HASHSCAN_URL=https://hashscan.io/testnet
 REACT_APP_RUN_TESTNET=true
+REACT_APP_NET=testnet
 REACT_APP_ENCRYPTION_KEY=fdfdf4232as,g'oan,goagv35sontigab157.,as=sjdy
