--- a/cloudbuild-testing.yaml
+++ b/cloudbuild-testing.yaml
@@ -1,7 +1,7 @@
 # cloudbuild.yaml
 steps:
   - name: 'gcr.io/cloud-builders/npm'
-    args: ['run', 'clientBuild']
+    args: ['run', 'clientBuildTesting']
 
   - name: 'gcr.io/cloud-builders/npm'
     args: ['install', '--force']
