--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,7 @@
 # cloudbuild.yaml
 steps:
   - name: 'gcr.io/cloud-builders/npm'
-    args: ['run', 'clientBuild']
+    args: ['run', 'clientBuildProd']
 
   - name: 'gcr.io/cloud-builders/npm'
     args: ['install', '--force']
