--- a/client/.env.testing
+++ b/client/.env.testing
@@ -1,6 +1,6 @@
 REACT_APP_HEDERA_NODE_API=https://testnet.mirrornode.hedera.com
-REACT_APP_NODE_BE_API=http://localhost:5000/api
-REACT_APP_NODE_BE_OPEN_SOURCE_API=http://localhost:8000/api
+REACT_APP_NODE_BE_API=/api
+REACT_APP_NODE_BE_OPEN_SOURCE_API=https://opensource-dot-skiller-champion.uc.r.appspot.com/api
 
 REACT_APP_TREASURY_ACCOUNT_ID=0.0.3833523
 
@@ -12,3 +12,4 @@ REACT_APP_TOPIC_ID_FORTUNE_WHEEL=0.0.3851161
 REACT_APP_HASHSCAN_URL=https://hashscan.io/testnet
 REACT_APP_NET=testnet
 REACT_APP_ENCRYPTION_KEY=fdfdf4232as,g'oan,goagv35sontigab157.,as=sjdy
+
