--- a/client/.env.testing
+++ b/client/.env.testing
@@ -11,5 +11,5 @@ REACT_APP_SILVER_PASS_TOKEN_ID=0.0.4578867
 REACT_APP_TOPIC_ID_FORTUNE_WHEEL=0.0.3851161
 REACT_APP_HASHSCAN_URL=https://hashscan.io/testnet
 REACT_APP_NET=testnet
-REACT_APP_ENCRYPTION_KEY=fdfdf4232as,g'oan,goagv35sontigab157.,as=sjdy
+REACT_APP_ENCRYPTION_KEY=fpydn87d.12pvud21.shd.4545shivd.88764sajfhhof..rlah
 
