--- a/app-prod.yaml
+++ b/app-prod.yaml
@@ -3,7 +3,7 @@ runtime: nodejs16
 env_variables:
   NODE_ENV: production
   PORT: 8080
-  API_ACCESS_KEY: ey.at622.fuafjgk8f.gjsgaa.0paf9g6a.ghards
+  API_ACCESS_KEY: 'JWT_KEY'
   TREASURY_ACCOUNT_ID: 0.0.2667423
   TREASURY_PRIVATE_KEY: 'TREASURY_PRIVATE_KEY'
   RUN_TESTNET: false
