--- a/app-prod.yaml
+++ b/app-prod.yaml
@@ -27,7 +27,7 @@ handlers:
   # Serve static assets from the React build
   - url: /(.*\.(js|css|png|jpg|gif|ico|json|html|otf))$
     static_files: client/build/\1
-    upload: client/build/.*\.(js|css|png|jpg|gif|ico|json|html|otf)$
+    upload: client/build/.*\.(js|css|png|jpg|gif|ico|json|html|otf|mp3)$
     secure: always
     redirect_http_response_code: 301
 
