--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
   "scripts": {
     "start": "env-cmd -f .env.production react-scripts start",
     "build": "env-cmd -f .env.production react-scripts build",
+    "localBuild": "env-cmd -f .env.development react-scripts build",
     "startLocal": "env-cmd -f .env.development react-scripts start",
     "testBuild": "env-cmd -f .env.testing react-scripts build",
     "eject": "react-scripts eject"
