--- a/client/.env.development
+++ b/client/.env.development
@@ -1,6 +1,7 @@
 REACT_APP_HEDERA_NODE_API=https://testnet.mirrornode.hedera.com
 REACT_APP_NODE_BE_API=http://localhost:5000/api
 REACT_APP_NODE_BE_OPEN_SOURCE_API=http://localhost:8000/api
+REACT_APP_SOCKET_API=http://localhost:8080
 
 REACT_APP_TREASURY_ACCOUNT_ID=0.0.3833523
 
