Completed 3x $Skiller drops

--- a/client/.env.production
+++ b/client/.env.production
@@ -7,6 +7,7 @@ REACT_APP_TREASURY_ACCOUNT_ID=0.0.2667423
 REACT_APP_PLATINUM_PASS_TOKEN_ID=0.0.2666239
 REACT_APP_GOLD_PASS_TOKEN_ID=0.0.3833529
 REACT_APP_SILVER_PASS_TOKEN_ID=0.0.2667749
+REACT_APP_SKILLER_TOKEN_ID=0.0.7477533
 
 REACT_APP_TOPIC_ID_FORTUNE_WHEEL=0.0.2698630
 REACT_APP_HASHSCAN_URL=https://hashscan.io/mainnet
