--- a/client/.env.testing
+++ b/client/.env.testing
@@ -7,6 +7,7 @@ REACT_APP_TREASURY_ACCOUNT_ID=0.0.3833523
 REACT_APP_PLATINUM_PASS_TOKEN_ID=0.0.3833528
 REACT_APP_GOLD_PASS_TOKEN_ID=0.0.3833529
 REACT_APP_SILVER_PASS_TOKEN_ID=0.0.4578867
+REACT_APP_SKILLER_TOKEN_ID=0.0.7477533
 
 REACT_APP_TOPIC_ID_FORTUNE_WHEEL=0.0.3851161
 REACT_APP_HASHSCAN_URL=https://hashscan.io/testnet
